# qtestlib-cocktails

./: .gitignore  .travis.yml  CMakeLists.txt  README.md
include/: cocktail.h  cocktailform.h
src/: cocktail.cpp  cocktailform.cpp  main.cpp
tests/: CMakeLists.txt  test.h
tests/include/: tst_cocktailformtest.h  tst_cocktailtest.h
tests/src/: main.cpp  main.cpp.in  tst_cocktailformtest.cpp  tst_cocktailtest.cpp
ui/: cocktailform.ui
